Update package configuration and enhance CLI version retrieval
- Changed the `files` entry in `package.json` to include all files in the `npx-cli/bin` directory.
- Added `adm-zip` as a new dependency in `package.json`.
- Updated `pnpm-lock.yaml` to reflect the addition of `adm-zip`.
- Refactored version retrieval in `cli.js` to handle multiple potential package.json locations, improving robustness for local builds.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "vibe-kanban": "npx-cli/bin/cli.js"
   },
   "files": [
-    "npx-cli/bin/cli.js",
+    "npx-cli/bin/**",
     "npx-cli/dist/**"
   ],
   "scripts": {
@@ -35,6 +35,9 @@
   "devDependencies": {
     "concurrently": "^8.2.2",
     "vite": "^6.3.5"
+  },
+  "dependencies": {
+    "adm-zip": "^0.5.16"
   },
   "engines": {
     "node": ">=18",
