--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "prepare-db": "node scripts/prepare-db.js",
     "prepare-db:check": "node scripts/prepare-db.js --check",
     "build:npx": "bash ./local-build.sh",
+    "update-latest": "bash ./scripts/update-latest.sh",
+    "build-and-update-latest": "npm pack && sleep 5 && npm run update-latest",
     "prepack": "npm run build:npx",
     "remote:dev": "cd crates/remote && docker compose --env-file .env.remote up --build ; docker compose down -v",
     "remote:prepare-db": "cd crates/remote && bash scripts/prepare-db.sh",
