--- a/frontend/package.json
+++ b/frontend/package.json
@@ -106,7 +106,6 @@
     "prettier": "^3.6.1",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.9.2",
-    "vite": "^5.0.8",
-    "vite-plugin-mkcert": "^1.17.9"
+    "vite": "^5.0.8"
   }
 }
