feat: Add `--restart-service` flag to `update-latest.sh` and integrate it into the `build-and-update-latest` npm script.

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "prepare-db:check": "node scripts/prepare-db.js --check",
     "build:npx": "bash ./local-build.sh",
     "update-latest": "bash ./scripts/update-latest.sh",
-    "build-and-update-latest": "npm pack && sleep 5 && npm run update-latest",
+    "build-and-update-latest": "npm pack && sleep 5 && npm run update-latest -- --restart-service",
     "prepack": "npm run build:npx",
     "remote:dev": "cd crates/remote && docker compose --env-file .env.remote up --build ; docker compose down -v",
     "remote:prepare-db": "cd crates/remote && bash scripts/prepare-db.sh",
